intro and hamburger done

--- a/index.html
+++ b/index.html
@@ -7,9 +7,48 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <header>
+        <button class="nav-toggle" aria-label="toggle nav">
+            <span class="hamburger"></span>
+        </button>
+        <nav class="nav">
+            <ul class="nav-list">
+                <li><a href="#home" class="nav-link">Home</a></li>
+                <li><a href="#services" class="nav-link">What I Do</a></li>
+                <li><a href="#about" class="nav-link">Who I Am</a></li>
+                <li><a href="#work" class="nav-link">My Work</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Introduction -->
+    <section id="home" class="intro">
+            <h1>Hi, I'm<span> Conner Mervine</span></h1>
+            <p class="disciplines">Web Development | Designer | Creator</p>
+            <a href="#work" class="btn">Check Out My Work!</a>
+        
+    </section>
+
+    <!-- What I Do -->
+    <section class="what-i-do">
+        <h2>What I Do</h2>
+    </section>
 
 
+    <!-- Who I am -->
+    <section class="who-i-am">
+
+    </section>
+
+    <!-- My Work -->
+    <section class="my-work">
+
+    </section>
+
+
+    <footer>
+
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
