--- a/index.html
+++ b/index.html
@@ -29,26 +29,71 @@
         
     </section>
 
+
+
     <!-- What I Do -->
-    <section class="what-i-do">
-        <h2>What I Do</h2>
-    </section>
+    <section id="services" class="what-i-do">
+  <h2>What I Do</h2>
+  <div class="services-container">
+    <div class="service-card">
+      <i class="fas fa-code"></i>
+      <h3>Web Development</h3>
+      <p>I build fast, responsive, and modern websites using HTML, CSS, JavaScript, and React.</p>
+    </div>
 
+    <div class="service-card">
+      <i class="fas fa-pencil-ruler"></i>
+      <h3>UI/UX Design</h3>
+      <p>I design clean, user-focused interfaces that provide seamless experiences across all devices.</p>
+    </div>
+  </div>
+</section>
 
-    <!-- Who I am -->
-    <section class="who-i-am">
-
-    </section>
+<!-- Who I am -->
+<section id="about" class="who-i-am">
+  <div class="about-container">
+    <div class="about-text">
+      <h2>Who I Am</h2>
+      <p>
+        Hi! I'm Conner Mervine, a passionate web developer and designer. I love creating websites and user experiences that are both visually appealing and functional.  
+        I specialize in HTML, CSS, and JavaScript, and I enjoy turning ideas into digital experiences that people love to use.
+      </p>
+      <p>
+        When I'm not coding, I enjoy watching sports, playing golf, and spending time with my family.
+      </p>
+    </div>
+    <div class="about-image">
+      <img src="your-photo.jpg" alt="Conner Mervine" />
+    </div>
+  </div>
+</section>
 
     <!-- My Work -->
-    <section class="my-work">
+   <section id="work" class="my-work">
+  <h2>My Work</h2>
+  <div class="work-container">
+    <div class="work-item">
+      <img src="project1.jpg" alt="Project 1 Screenshot" />
+      <div class="overlay">
+        <p>Project 1</p>
+      </div>
+    </div>
 
-    </section>
+    <div class="work-item">
+      <img src="project2.jpg" alt="Project 2 Screenshot" />
+      <div class="overlay">
+        <p>Project 2</p>
+      </div>
+    </div>
+  </div>
+</section>
 
 
     <footer>
-
-    </footer>
+  <div class="footer-container">
+    <p>&copy; 2025 Conner Mervine. All rights reserved.</p>
+  </div>
+</footer>
     <script src="script.js"></script>
 </body>
 </html>
