--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </p>
     </div>
     <div class="about-image">
-      <img src="your-photo.jpg" alt="Conner Mervine" />
+      <img src="IMG_6742.jpeg" alt="Conner Mervine" />
     </div>
   </div>
 </section>
@@ -73,14 +73,14 @@
   <h2>My Work</h2>
   <div class="work-container">
     <div class="work-item">
-      <img src="project1.jpg" alt="Project 1 Screenshot" />
+      <img src="StoreSS.JPG" alt="Project 1 Screenshot" />
       <div class="overlay">
         <p>Project 1</p>
       </div>
     </div>
 
     <div class="work-item">
-      <img src="project2.jpg" alt="Project 2 Screenshot" />
+      <img src="TicTacToeSS.JPG" alt="Project 2 Screenshot" />
       <div class="overlay">
         <p>Project 2</p>
       </div>
